# exit_strat

./: .gitignore  Cargo.toml  README.md
src/: affirmations.rs  kalman_bf.rs  lift.rs  logging.rs  main.rs  menu.rs  model1.rs  publish.rs  s3_sync.rs  stats.rs  util.rs
src/schedule/: friday.rs  mod.rs  monday.rs  saturday.rs  sunday.rs  thursday.rs  tuesday.rs  utils.rs  wednesday.rs
veryonlineguy.com/: hugo.toml
veryonlineguy.com/themes/hugo-bearblog/exampleSite/static/: ._images
veryonlineguy.com/themes/hugo-bearblog/layouts/: index.html
veryonlineguy.com/themes/hugo-bearblog/layouts/partials/: footer.html  nav.html
