[package]
name = "exit_strategy"
version = "0.1.70"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.36", features = ["derive"] }
csv = "1.3.1"
dotenv = "0.15.0"
nalgebra = "0.33.2"
rand = "0.9.0"
regex = "1.10.0"
reqwest = {version= "0.12.15",  features = ["json", "blocking"] }
rusqlite = "0.37.0"
tokio = { version = "1.0", features = ["full"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
